Немного переработана глава посвященная идентификации скорости набегающего потока.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -128,10 +128,11 @@
     \item $c$ -- длина хорды лопасти.
 \end{itemize}
 
-На основе уравнения \ref{eq:propeler_model} упор движителя и момент сопротивления может быть записан следующим образом:
+На основе уравнения \ref{eq:propeler_model} упор движителя и момент сопротивления может быть записан следующим образом \cite{пантов1973основы}:
 \begin{gather}
-    T = \rho D^4K_T(J_0)n|n| \\
-    Q = \rho D^5K_Q(J_0)n|n|
+    \label{eq:kt_kq}
+    T(n, J_0) = K_T (J_0) \rho D^4 n |n|\\
+    Q(n, J_0) = K_Q (J_0) \rho D^5 n |n|
 \end{gather}
 
 \subsection{Математическая модель привода движителя}
