--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -1,11 +1,11 @@
 \chapter{Оценка скорости набегающего потока в установившемся режиме движения ПА по изменению параметров работы маршевых движителей}\label{ch:Velocity}
 
 \section{Анализ модели маршевого движителя в установившемся режиме работы}
-Упор создаваемый гребным винтом движителя $T$ и момент сопротивления вращению $Q$ формируемый при этом на валу определяется следующими формулами \cite{пантов1973основы}:
-\begin{gather}
-    T(n, J_0) = K_T (J_0) \rho D^4 n |n| \notag \\
-    Q(n, J_0) = K_Q (J_0) \rho D^5 n |n| \label{eq:torque_stab}
-\end{gather}
+Как было показано в формулах \ref{eq:kt_kq} в установившемся режиме упор создаваемый гребным винтом движителя $T$ и момент сопротивления вращению $Q$ формируемый при этом на валу определяется следующими формулами:
+\begin{gather*}
+    T(n, J_0) = K_T (J_0) \rho D^4 n |n|\\
+    Q(n, J_0) = K_Q (J_0) \rho D^5 n |n|
+\end{gather*}
 \noindent где:
 \begin{itemize}
     \item $K_T (J_0), K_Q (J_0)$ -- соответственно, коэффициенты упора и момента;
@@ -17,21 +17,20 @@
 Переменная $J_0$ представляет собой относительную поступь и определяется следующим уравнением:
 \begin{equation}
     \label{eq:ratio_1}
-    J_0 = \frac{u_a}{nD}
+    J_0 = \frac{v_a}{nD}
 \end{equation}
-\noindent где $u_a$ -- скорость набегающего потока воды относительно ПА.
-Эта скорость не совсем равна скорости аппарата $u$ и в устоявшемся режиме связана с ней следующим соотношением \cite{lewis1988principles}:
+\noindent где $v_a$ -- скорость набегающего потока воды относительно ПА.
+Эта скорость не совсем равна скорости аппарата $v$ и в устоявшемся режиме связана с ней следующим соотношением \cite{lewis1988principles}:
 \begin{equation*}
-    u_a = (1-w)u
+    v_a = (1-w)v
 \end{equation*}
 \noindent где $w$ -- коэффициент попутного потока.
-Параметр $w$ находится в диапазоне $0.1-0.4$ в зависимости от конструктивных особенностей движителя и ПА.
 
 Более подробно параметр $w$ представлен в работе \cite{10.1016/s1474-6670-17-46514-1} которая опирается лекционные заметки \cite{walderhaug1992motstand}:
 
 \begin{equation*}
     \label{eq:ambient_flow}
-    u_a = (1-w)u = (1 - w_w - w_p - w_v)u
+    v_a = (1-w)u = (1 - w_w - w_p - w_v)v
 \end{equation*}
 \noindent где:
 \begin{itemize}
@@ -39,7 +38,11 @@
     \item $w_v$ -- составная часть коэффициента попутного потока отражающая влияние вязких эффектов из-за влияния пограничных слоев.
 \end{itemize}
 
-Коэффициенты упора и момента гребного винта $K_T (J_0), K_Q (J_0)$ в больших пределах могут быть линейно аппроксимированы следующим образом \cite{10.1109/48.838987}:
+Параметр $w$ находится в диапазоне $0.1-0.4$ в зависимости от конструктивных особенностей судна.
+Этот коэффициент важен для движителей судов так как движители там установлены в гидродинамической тени, которую создает корпус судна и учет этого параметра необходим.
+При разработке АНПА, за счет малого и обтекаемого корпуса и, зачастую, за счет выноса маршевой группы из гидродинамической тени создаваемой аппаратом, этим коэффициентом можно пренебречь и в дальнейшем в работе мы будем считать что $v_a \approx v$.
+
+Коэффициенты упора и момента гребного винта $K_T (J_0), K_Q (J_0)$ в ограниченных пределах могут быть линейно аппроксимированы следующим образом \cite{10.1109/48.838987}:
 \begin{gather}
     \label{eq:coef_1}
     K_T(J_0) = \alpha_1 - \alpha_2 J_0 \\
@@ -58,43 +61,59 @@
 
 Из определения линейной аппроксимации коэффициента момента (\ref{eq:torque_linear}) и относительной поступи (уравнение \ref{eq:ratio_1}) можно выразить скорость набегающего потока следующим образом:
 \begin{equation}
-    u_a = \frac{1}{\beta_1} n D \left( K_Q^{bp} - K_Q \right)
+    v = \frac{1}{\beta_1} n D \left( K_Q^{bp} - K_Q \right)
 \end{equation}
-\noindent где коэффициент момента гребного винта в установившемся режиме хорошо описывается выражением \ref{eq:torque_stab}.
 
-С другой стороны динамика электропривода движителя стандартно представляется следующими дифференциальными уравнениями, которые хорошо описывают поведение асинхронного бесколлекторного двигателя:
-\begin{gather*}
-    L_a\frac{d}{dt}I=-R_aI-K_m n + V_m \\
-    J_m\dot{n} = K_m I - Q
-\end{gather*}
+С другой стороны динамика электропривода подводного движителя стандартно представляется следующими дифференциальными уравнениями:
+\begin{equation*}
+    \begin{array}{rl}
+        L_a\dot{I} &=-R_aI-C_e n + V \\
+        J_m\dot{n} &= C_m I - Q
+    \end{array}
+\end{equation*}
+\noindent где:
+\begin{itemize}
+    \item $V$ -- напряжение подводнимое к мотору;
+    \item $I$ -- ток в обмотках;
+    \item $n$ -- частота вращения вала электропривода;
+    \item $Q$ -- момент на валу;
+    \item $C_m$ -- коэффициент момента электропривода;
+    \item $R_a$ -- активное сопротивление обмоток электропривода;
+    \item $L_a$ -- индуктивность обмоток электропривода;
+    \item $С_e$ -- коэффициент самоиндукции;
+    \item $J_m$ -- момент инерции вала.
+\end{itemize}
 
-Важно учесть что, при релейном управлении фазами бесколлекторного двигателя коэффициент $K_m$ не является постоянной величиной и имеет обратно экспоненциальную зависимость от времени между переключениями фаз. 
-Эта зависимость хорошо описывается следующим уравнением в установившемся режиме работы мотора:
+Соответственно в установившемся режиме момент на валу движителя прямо пропорционален току на его обмотках:
 \begin{equation}
-    \label{eq:couple_coeff}
-    Q(n, I) = K_m(n)I = F_m \frac{I}{n}
+    Q = C_mI
 \end{equation}
-\noindent где $I$ -- ток на обмотках мотора, $n$ -- скорость вращения вала мотора, а переменную $F_m$ будем называть коэффициентом магнитной связности ротора и статора и её считаем величиной постоянной для данной конструкции привода.
 
-Соответственно, в установившемся режиме работы привода момент на валу мотора пропорционален току на обмотке привода, тогда может быть получено следующее выражение для расчета скорости набегающего потока на гребной винт движителя:
+% Важно учесть что, при релейном управлении фазами бесколлекторного двигателя коэффициент $K_m$ не является постоянной величиной и имеет обратно экспоненциальную зависимость от времени между переключениями фаз. 
+% Эта зависимость хорошо описывается следующим уравнением в установившемся режиме работы мотора:
+% \begin{equation}
+%     \label{eq:couple_coeff}
+%     Q(n, I) = K_m(n)I = F_m \frac{I}{n}
+% \end{equation}
+% \noindent где $I$ -- ток на обмотках мотора, $n$ -- скорость вращения вала мотора, а переменную $F_m$ будем называть коэффициентом магнитной связности ротора и статора и её считаем величиной постоянной для данной конструкции привода.
 
+% Соответственно, в установившемся режиме работы привода момент на валу мотора пропорционален току на обмотке привода, тогда может быть получено следующее выражение для расчета скорости набегающего потока на гребной винт движителя:
+
+Тогда формула для расчета скорости по параметрам работы движителя будет записана следующим образом:
 \begin{equation}
     \label{eq:velocity_final}
-    u_a \approx u = \frac{1}{\beta_1} \left( K_Q^{bp} n_u D - F_m\frac{I_u}{\rho D^4|n_u|n_u} \right)
+    u = \frac{1}{\beta_1} \left( K_Q^{bp} n D - K_m\frac{I}{\rho D^4|n|n} \right)
 \end{equation}
 \noindent где 
 \begin{itemize}
-    \item $K_Q^{bp}$ -- коэффициент момента сопротивления вращению гребного винта рассчитанный в ходе швартовных испытаний движителя; \item $\beta_1$ -- линейный коэффициент полиномиальной аппроксимации коэффициента момент $K_Q$;
-    \item $I_u$ -- ток на обмотках привода движителя при заданном коде управления $u$;
-    \item $n_u$ -- скорость вращения вала движителя при заданном коде управления $u$;
+    \item $K_Q^{bp}$ -- коэффициент момента сопротивления вращению гребного винта рассчитанный в ходе швартовных испытаний движителя; \item $\beta_1$ -- линейный коэффициент полиномиальной аппроксимации коэффициента момента сопротивления вращению $K_Q$;
+    \item $I$ -- ток на обмотках электропривода движителя;
+    \item $n$ -- скорость вращения вала электропривода;
 \end{itemize}
 
-В дальнейших расчетах мы будем принимать $u \approx u_a$, т.е. считать что коэффициент попутного потока $w$ пренебрежимо мал.
-Этот коэффициент важен для движителей судов, т.к., зачастую, движители там установлены в гидродинамической тени, которую создает корпус судна и там учет этого параметра необходим.
-При разработке автономных необитаемых подводных аппаратов, за счет малого и обтекаемого корпуса и, зачастую, за счет выноса маршевой группы из гидродинамической тени создаваемой аппаратом, этим коэффициентом можно пренебречь.
-
 \section{Учёт пространственной ориентации маршевых движителей при оценке скорости набегающего потока}
-В случае, если подводный аппарат оснащён единственным маршевым движителем, а маневрирование обеспечивается рулями управления в режиме крейсерской скорости или при помощи подруливающих движителей в позиционном режиме или в режиме малых скоростей. Примером таких аппаратов может служить линейка АНПА ``Remus'' \cite{allen1997remus, kukulya2010under}.
+В случае, если подводный аппарат оснащён единственным маршевым движителем, а маневрирование обеспечивается рулями управления в режиме крейсерской скорости или при помощи подруливающих движителей в позиционном режиме или в режиме малых скоростей, то формула \ref{eq:velocity_final} может обеспечить оценку скорости набегающего потока.
+Примером таких аппаратов может служить линейка АНПА ``Remus'' \cite{allen1997remus, kukulya2010under}.
 
 С другой стороны, отечественная практика разработки автономных подводных аппаратов отходит от мировой и в основном заключается в использовании четырех движителей, расположенных в кормовой секции под некоторым углом к продольной оси аппарата.
 Это такие аппараты как «МТ-2010» \cite{борейко2011малогабаритный}, «ММТ-3000» \cite{горнак2007ммт} и прочие АНПА разработанные в Институте проблем морских технологий ДВО РАН. 
@@ -102,7 +121,7 @@
 Такой подход позволяет повысить надежность системы за счет отсутствия основного двигателя, поломка которого полностью выведет из строя подводный аппарат.
 Кроме этого такая конфигурация движительно-рулевого комплекса позволяет обеспечивать управление по вращательным степеням свободы даже в позиционном режиме.
 
-Если в маршевой группе движителей подводного аппарата больше одного, то расчёт скорости набегающего потока по изменению параметров работы приводов становится более затруднительным и требует точного учета расположения и ориентации каждого движителя в пространстве.
+В этом расчёт скорости набегающего потока по изменению параметров работы электроприводов более затруднителен и требует точного учета расположения и ориентации каждого движителя в пространстве.
 
 Пусть движители повёрнуты относительно продольной оси аппарата на углы $\phi^i, \theta^i$, где угол $\phi^i$ определяет разворот движителя в горизонтальной плоскости, а $\theta^i$ -- разворот движителя в вертикальной плоскости.
 Идентификатор $i$ меняется в диапазоне $[1,..,k]$, где $k$ -- количество движителей в кормовой секции.
@@ -120,22 +139,42 @@
     \item $\theta^i_t$ -- отклонение движителя от продольной оси аппарата в вертикальной плоскости плоскости;
 \end{itemize}
 
-Кроме этого, так же важно учесть, что при наличии ненулевых углов атаки $\alpha$ и дрейфа $\beta$ в скоростной системе координат идентифицируемые скорости на различных движителях будут различны и это необходимо учитывать.
+Но такая конфигурация маршевой группы движителей позволяет определять не только скорость набегающего потока, как в случае единственного маршевого движителя, но так же и углы атаки и дрейфа.
 
-Пусть АНПА движется со скоростью $u$ относительно грунта с курсом $\phi$ в локальной инерциальной системе координат и постоянным дифферентом вызванным положительной плавучестью АНПА $\theta_b$.
+Пусть аппарат оснащен симметричной маршевой группой, состоящей из двух вертикальных и двух горизонтальных движителей.
+Каждый из отклонён от продольной оси аппарата на $\delta$. 
+Пусть на аппарат набегает поток величиной $u$ и при этом угол атаки ПА в ССК $\alpha$ и угол дрейфа $\beta$.
+В этом случае скорости детектиуремые на движителях определяются следующими зависимостями:
+\begin{equation*}
+    \left\{
+    \begin{array}{l}
+        v_l = v \cos{(\delta - \beta)} \\
+        v_r = v \cos{(\delta + \beta)} \\
+        v_u = v \cos{(\delta - \alpha)} \\
+        v_d = v \cos{(\delta + \alpha)}
+    \end{array}
+    \right.
+\end{equation*}
 
-Пусть течение в области движения АНПА неизменно по скорости и направлению и определяется переменными $u_c$ и $\phi_c$ В ИСК, соответственно.
+Из представленной системы уравнений несложно получить что угол атаки и угол дрейфа можно описать следующими выражениями:
 
-\begin{noteplan}
-    Тут еще не доработано. Добавлю про расчет угла атаки и дрейфа и возможность расчета параметров течения, если есть данные с доплера.
-\end{noteplan}
+\begin{gather}
+    \beta = \arctan{\left[\frac{1}{\tan{\delta}}\frac{v_l-v_r}{v_l+v_r}\right]} \\
+    \alpha = \arctan{\left[\frac{1}{\tan{\delta}}\frac{v_u-v_d}{v_u+v_d}\right]}
+\end{gather}
+
+% Кроме этого, так же важно учесть, что при наличии ненулевых углов атаки $\alpha$ и дрейфа $\beta$ в скоростной системе координат идентифицируемые скорости на различных движителях будут различны и это необходимо учитывать.
+
+% Пусть АНПА движется со скоростью $u$ относительно грунта с курсом $\phi$ в локальной инерциальной системе координат и постоянным дифферентом вызванным положительной плавучестью АНПА $\theta_b$.
+
+% Пусть течение в области движения АНПА неизменно по скорости и направлению и определяется переменными $u_c$ и $\phi_c$ В ИСК, соответственно.
+
+% \begin{noteplan}
+%     Тут еще не доработано. Добавлю про расчет угла атаки и дрейфа и возможность расчета параметров течения, если есть данные с доплера.
+% \end{noteplan}
 
 \section{Экспериментальное исследование разработанного метода оценки скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
 В рамках исследования была проверена гипотеза о работоспособности метода оценки скорости набегающего потока по изменению параметров работы приводов маршевых двигателей.
-
-\begin{noteplan}
-    Здесь добавлю обработку данных с MMT-300. Там можно расчитать угол атаки который можно валидировать через угол дифферента в устоявшемся режиме. Но, наверное, в рамках НКР по остаточному принципу.
-\end{noteplan}
 
 Для этого этого были проанализированы стендовые и маршевые испытания движителей маршевой группы АНПА ``ММТ-3000'', а так же проанализированы данные тестовых запусков подводного аппарата в рамках которых были идентифицированы ГДХ аппарата.
 
@@ -189,25 +228,33 @@
         \bottomrule
     \end{tabular}
 \end{table}
-
-В рамках проведения нагрузочных испытаний электродвигателя был определен коэффициент магнитной связности $F_m$ (формула \ref{eq:couple_coeff}), который хорошо описывает зависимость момента на валу электропривода от величины тока на его в обмотках с поправкой на скорость вращения вала.
-На рисунке \ref{fig:motor_torque} отражена зависимость момента создаваемого электроприводом на валу и её расчет через коэффициент магнитной связности $F_m$ с поправкой на скорость вращения вала.
-
-\begin{noteplan}
-    Это наверное переделаю просто на нелинейность параметра Cm. Не думаю что есть смысл вводить новую сущность.
-\end{noteplan}
+На рисунке \ref{fig:motor_load_test} продемонстированы результаты проведения нагрузочных испытаний электродвигателя.
+Хоть зависимость между моментом на валу электропривода и значением тока на обмотках мотора зависит явно линейно, коэффициент момента $C_m$ различен для разных значений кода управления.
+Это поведение хорошо описывается уравнением:
+\begin{equation*}
+    C_m(k) = \frac{C_m^0}{k}
+\end{equation*}
+\noindent где $C_m^0$ -- некоторая постоянная, а $k$ -- код управления электроприводом.
+Результаты аппроксимации значения коэфициента момента от кода управления для $C_m^0 = 15.2$ приведены на рисунке \ref{fig:function_cm}.
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Зависимость момента от тока.png}
-    \caption{Зависимость момента на валу электропривода полученная в рамках нагрузочных испытаний и её расчет через коэффициент $F_m$}
-    \label{fig:motor_torque}
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Нагрузочные испытания.png}
+    \caption{Результаты нагрузочных испытаний электропривода ``2 ДБМ 70-1,1-1,3-3''.}
+    \label{fig:motor_load_test}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Cm от кода управления.png}
+    \caption{Зависимость коэфициента момента электропривода от кода управления $k$.}
+    \label{fig:function_cm}
 \end{figure}
 
 \subsection{Параметры гребного винта}
 В качестве гребного винта на АНПА ``ММТ-3000'' был использован стандартный трехлопастной винт, который изготавливается путем отливки из пластика.
-Гидродинамические коэффициенты винта $K_T, K_q$ были заранее получены регрессионным анализом по его геометрическим параметрам.
-Они показаны на рисунке \ref{fig:mmt3000_propeller} вместе с их линейной аппроксимацией в диапазоне относительной поступи 0-0.5, где 0.5 соответствует скорости АНПА примерно 1.5 м/с и скорости вращения гребного винта 22 об/сек.
+Первичные гидродинамические коэффициенты винта $K_T, K_Q$ были заранее получены регрессионным анализом по его геометрическим параметрам.
+Они показаны на рисунке \ref{fig:mmt3000_propeller} вместе с их линейной аппроксимацией в диапазоне относительной поступи 0-0.5, где 0.5 соответствует скорости АНПА примерно 1,5 м/с и скорости вращения гребного винта 22 об/сек.
 Все расчетные параметры гребного винта представлены в таблице \ref{tab:mmt3000_propeller}.
 
 \begin{table}
@@ -223,10 +270,10 @@
         Диаметр, м & 0,19 \\
         Дисковое отношение & 0,40 \\
         Шаговое отношение & 0,87 \\
-        Регрессионный $K_T$ & $-0.0964\lambda^2 -0.2774\lambda + 0.3519$ \\
-        Регрессионный $K_Q$ & $-0.0144\lambda^2 -0.0301\lambda + 0.0456$ \\
-        Регрессионный $K_T^{lin}$ & $-0.3256\lambda + 0.3558$ \\
-        Регрессионный $K_Q^{lin}$ & $-0.0373\lambda + 0.0462$ \\
+        Регрессионный $K_T$ & $-0.0964J_0^2 -0.2774J_0 + 0.3519$ \\
+        Регрессионный $K_Q$ & $-0.0144J_0^2 -0.0301J_0 + 0.0456$ \\
+        Регрессионный $K_T^{lin}$ & $-0.3256J_0 + 0.3558$ \\
+        Регрессионный $K_Q^{lin}$ & $-0.0373J_0 + 0.0462$ \\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -239,7 +286,7 @@
 \end{figure}
 
 \subsection{Анализ результатов швартовных испытаний маршевых движителя}
-Были проведён анализ результатов швартовных испытаний движителя в рамках которого были получены значения усилия создаваемого движителем и потребляемого при этом тока в зависимости от заданного кода управления задаваемого в систему управления движителем.
+В рамках исследования был проведён анализ результатов швартовных испытаний движителя, в результате чего были получены значения усилия создаваемые движителем и потребляемый при этом ток в зависимости от задаваемого кода управления.
 
 Код управления движителем представляет собой целое число находящееся в пределах от -127 до 127, где диапазон от 0 до 127 пропорционально изменяет эффективное значение напряжения на моторе в диапазоне от 0 до 24В, а диапазон от 0 до -127 формирует аналогичное напряжение но с обратным направлением вращения вала мотора.
 
@@ -267,7 +314,7 @@
     \label{fig:mmt3000_torque_rotation2}
 \end{figure}
 
-По этим данным были уточнены параметры коэффициентов $K_T, K_Q$ в части $\lambda = 0$, то есть при отсутствии набегающего потока.
+По этим данным были уточнены параметры коэффициентов $K_T, K_Q$ в части $J_0 = 0$, то есть при отсутствии набегающего потока.
 На рисунках \ref{fig:mmt3000_propeller_kt_bollard} и \ref{fig:mmt3000_propeller_kq_bollard} соответственно отображены уточненные по результатам швартовных испытаний движителя зависимости коэффициента упора винта $K_T$ и его коэффициента момента сопротивления вращению $K_Q$.
 Численные значения уточненных линеаризованных параметров гребного винта представлены в таблице \ref{tab:mmt3000_propeller_bollard}.
 
@@ -279,8 +326,8 @@
         \toprule
         Наименование параметра  & Значение\\
         \midrule
-        $K_T^{lin}$ & $-0.3256\lambda + 0.3421$ \\
-        $K_Q^{lin}$ & $-0.0373\lambda + 0.0501$ \\
+        $K_T^{lin}$ & $-0.3256J_0 + 0.3421$ \\
+        $K_Q^{lin}$ & $-0.0373J_0 + 0.0501$ \\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -307,38 +354,47 @@
 
 В качестве данных для анализов использовались калибровочные запуски АНПА ``ММТ-3000'' для расчета ГДХ подводного аппарата, полученные в 2019 году в заливе Патрокл.
 Для расчета ГДХ были проведены запуски подводного аппарата на фиксированной глубине со ступенчатым изменением скорости продольного движения.
-График изменения скорости представлен на рисунке \ref{fig:mmt3000_velocity}.
+График изменения скорости представлен на рисунке \ref{fig:mmt3000_velocity} и соответствующее изменение относительной поступи винта с поправкой на пространственную ориентацию движителей представлена на рисунке \ref{fig:advance_ratio}.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Скорость с допплера.png}
-    \caption{График изменения скорости подводного аппарата ``MMT-3000''.}
+    \caption{Изменение скорости АНПА ``MMT-3000'' на всем маршруте движения.}
     \label{fig:mmt3000_velocity}
 \end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Относительная поступь.png}
+    \caption{Значение относительной поступи ГВ маршевой группы движителей АНПА ``MMT-3000'' на всем маршруте движения.}
+    \label{fig:advance_ratio}
+\end{figure}
+
 
 Соответствующие ему график изменения потребляемого тока и скорости вращения гребных винтов движителей маршевой группы представлены на рисунках \ref{fig:mmt3000_curent} и  \ref{fig:mmt3000_rotation}, соответсвенно.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Токи движителей.png}
-    \caption{График изменения тока движителей маршевой группы подводного аппарата ``MMT-3000''.}
+    \caption{Ток на обмотках электроприводов маршевой группы движителей АНПА ``MMT-3000''.}
     \label{fig:mmt3000_curent}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Обороты движителей.png}
-    \caption{График изменения скорости вращения гребных винтов движителей маршевой группы подводного аппарата ``MMT-3000''.}
+    \caption{Скорости вращения гребных винтов движителей маршевой группы подводного аппарата ``MMT-3000''.}
     \label{fig:mmt3000_rotation}
 \end{figure}
 
-В первую очередь, по первой части движения АНПА (время от 0 до 185 секунд) были откалиброван параметр $\beta_1$, который представляет собой линейный коэффициент полиномиальной аппроксимации коэффициента сопротивления вращению гребного винта $K_Q$. 
+По первой части движения АНПА (время от 0 до 185 секунд) был откалиброван параметр $\beta_1$, который представляет собой линейный коэффициент полиномиальной аппроксимации коэффициента сопротивления вращению гребного винта $K_Q$. 
 
 Была использована выведенная формула расчета скорости набегающего потока \ref{eq:velocity_final} с учётом геометрии движительно-рулевого комплекса (уравнение \ref{eq:velocity_orientation}).
 Для этого по методу наименьших квадратов был рассчитан такой параметр $\beta_1$ при котором минимизируется следующая разница:
-\begin{equation*}
+\begin{equation}
+    \label{eq:b1_search}
     min\left\{ \sum_{i=0}^N\left( v_d - v_i \right)^2 \right\}
-\end{equation*}
+\end{equation}
 \noindent где:
 \begin{itemize}
     \item $N$ -- количество движителей маршевой группы;
@@ -348,12 +404,12 @@
 
 По данному методу коэффициент $\beta_1$ составил 0.0301 (по расчетам в рамках регрессионного анализа для данной геометрической конфигурации гребного винта данный коэффициент составил 0.0363).
 
-На рисунке \ref{fig:mmt3000_velocity_test} показан график скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на тестовом участке движения от 0 до 185 секунд.
+На рисунке \ref{fig:mmt3000_velocity_test} показан график скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на тестовом участке движения от 0 до 185 секунд после уточнения параметра $\beta_1$ по формуле \ref{eq:b1_search}.
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{velocity/ММТ3000 - идентификация b2.png}
-    \caption{График скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на тестовом участке движения от 0 до 185 секунд.}
+    \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Скорость первый участок.png}
+    \caption{Скорость продольного движения АНПА ``ММТ-3000'' от 0 до 185 секунд.}
     \label{fig:mmt3000_velocity_test}
 \end{figure}
 
@@ -363,7 +419,7 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{velocity/ММТ3000 - тестирование b2.png}
-    \caption{График скорости продольного движения АНПА ``ММТ-3000'' полученный разными методами на проверочном участке движения от 240 до 410 секунд.}
+    \caption{Cкорость продольного движения АНПА ``ММТ-3000'' на проверочном участке движения от 240 до 410 секунд.}
     \label{fig:mmt3000_velocity_check}
 \end{figure}
 
